# sdlamp

./: .gitignore  .gitmodules  CMakeLists.txt  mac.wsz  sdlamp.c  skinner_atlas.wsz
hifi/: PLEDIT.TXT  info.txt  region.txt  viscolor.txt
old_macos_skin/: Mainmenu.cur  Winampmb.txt  mb.ini  pledit.txt  readme.txt  viscolor.txt
skinner_atlas/: PLEDIT.txt  VISCOLOR.txt
